cleaned up activeBuffers periodically